# pytemplate

./: .env.template  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
notebooks/: main.ipynb
tests/: test_main.py
